# WASM-Webserver-Rust

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml
examples/chat/: Cargo.toml
examples/chat/res/: 404.html  index.html
examples/chat/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  tests.rs
lib/src/http/: http_body.rs  http_request.rs  http_response.rs  message_body.rs  mod.rs  uri.rs
lib/src/router/: mod.rs  router.rs
lib/src/server/: mod.rs  options.rs  server.rs  threadpool.rs
lib/src/templates/: mod.rs  templates.rs
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml
main/src/: aa.html  main.rs  personal.rs
res/: index.html
