[package]
name = "dev-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dev-site"
path = "src/main.rs"

[env]
PUB_DIR = { value = "res", relative = true } # Directory for front end files

[dependencies]
webserver = { path="../lib" }
reqwest = "0.11.14"
pollster = "0.3.0"
tokio = { version = "1.12.0", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }